src/App.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
@import url("https://fonts.cdnfonts.com/css/sf-pro-display");
@tailwind base;
@tailwind components;
@tailwind utilities;
* {
  /* font-family: 'SF Pro Display' ,'Inter' ,sans-serif; */
  font-family: "Inter", sans-serif;
  outline: none;
}
input {
  font-size: 14px;
}
/* ANT DESIGN */
/* Change the text color of the select input */
.ant-select-selection-placeholder {
  color: #9ca3af !important;
}
.ant-picker-input input::placeholder {
  color: #9ca3af !important;
}
.ant-input::placeholder {
  color: #9ca3af !important;
}
.ant-select-item-option-selected{
  color: white !important;
}

select {
  -webkit-appearance: none;
  -moz-appearance: none;
  background-image: url("data:image/svg+xml;utf8,<svg fill='gray' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
  background-repeat: no-repeat;
  background-position-x: 98%;
  background-position-y: 50%;
}
.shadow-custom {
  box-shadow: 0px 0px 15px 0px #00000028;
  color: #f9fafc;
}
.shadow-custom2{
  box-shadow: 0px 4px 20px 4px #131313a8;
}
.gridRespo {
  width: 100%;
  margin: auto;
  display: grid;
  gap: 5px 15px;
  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
}
@media only screen and (max-width: 800px) {
  .gridRespo {
    /* max-width: 1000px; */
    width: 100%;
    margin: auto;
    display: grid;
    gap: 30px;
    grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
  }
}
.container {
  --uib-size: 40px;
  --uib-color: #0066ff;
  --uib-speed: 0.6s;
  --uib-bg-opacity: 0.2;
  height: var(--uib-size);
  width: var(--uib-size);
  transform-origin: center;
  animation: rotate var(--uib-speed) linear infinite;
  will-change: transform;
  overflow: visible;
}
.car {
  fill: none;
  stroke: var(--uib-color);
  stroke-dasharray: 25, 75;
  stroke-dashoffset: 0;
  stroke-linecap: round;
  transition: stroke 0.5s ease;
}
.track {
  fill: none;
  stroke: var(--uib-color);
  opacity: var(--uib-bg-opacity);
  transition: stroke 0.5s ease;
}
@keyframes rotate {
  100% {
    transform: rotate(360deg);
  }
}
::-webkit-scrollbar {
  width: 13px;
  height: 13px;
}
::-webkit-scrollbar-thumb {
  background-color: #88888869;
  border: 3px solid white;
  border-radius: 30px;
  cursor: default;
}
::-webkit-scrollbar-thumb:hover {
  background-color: #3a3a3a63;
}
::-webkit-scrollbar-track {
  background-color: transparent;
}
::-webkit-scrollbar-corner {
  background-color: transparent;
}

